# libcudf-rs

./: AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE.md  README.md
docs/: stream-runtime-redesign-plan.md
libcudf-benchmarks/: Cargo.toml
libcudf-benchmarks/benches/: arrow_conversion.rs
libcudf-datafusion/: Cargo.toml
libcudf-datafusion-benchmarks/: .gitignore  Cargo.toml  README.md  gen-clickbench.sh  gen-tpcds.sh  gen-tpch.sh
libcudf-datafusion-benchmarks/src/: compare.rs  harness.rs  main.rs  prepare_clickbench.rs  prepare_tpcds.rs  prepare_tpch.rs  profile_compare.rs  results.rs  run.rs
libcudf-datafusion-benchmarks/src/datasets/: clickbench.rs  common.rs  mod.rs  tpcds.rs  tpch.rs
libcudf-datafusion-benchmarks/testdata/tpcds/queries/: q47.sql  q57.sql  q72.sql
libcudf-datafusion/benches/: aggregate.rs  join.rs  load_unload.rs  parquet_scan.rs  tpch_pipeline.rs
libcudf-datafusion/src/: decimal.rs  errors.rs  execution.rs  lib.rs  metrics.rs
libcudf-datafusion/src/aggregate/: mod.rs  stream.rs
libcudf-datafusion/src/aggregate/op/: avg.rs  count.rs  max.rs  min.rs  mod.rs  sum.rs  udf.rs
libcudf-datafusion/src/expr/: ast.rs  binary.rs  column.rs  decimal.rs  literal.rs  mod.rs
libcudf-datafusion/src/optimizer/: config.rs  host_to_cudf.rs
libcudf-datafusion/src/physical/: coalesce.rs  coalesce_batches.rs  cudf_load.rs  cudf_parquet_scan.rs  cudf_unload.rs  filter.rs  hash_join.rs  mod.rs  projection.rs  sort.rs
libcudf-datafusion/src/physical/aggregate/: mod.rs  stream.rs
libcudf-datafusion/src/physical/aggregate/op/: avg.rs  count.rs  max.rs  min.rs  mod.rs  sum.rs  udf.rs
libcudf-datafusion/src/physical/cudf_parquet_scan/: mod.rs  reader.rs  scan_source.rs
libcudf-datafusion/src/physical/parquet_scan/: mod.rs  read_plan.rs  reader.rs  scan_source.rs
libcudf-datafusion/src/planner/: config.rs  host_to_cudf.rs  mod.rs  parquet_scan.rs  session_state_builder_ext.rs
libcudf-datafusion/src/test_utils/: insta.rs  mod.rs  session_context.rs  tpch.rs
libcudf-datafusion/tests/: clickbench_correctness.rs  clickbench_plans.rs  tpch_correctness.rs  tpch_plans.rs
libcudf-sys/: .clangd  Cargo.toml  build.rs  generate_compile_commands.sh
libcudf-sys/src/: aggregation.cpp  aggregation.h  binaryop.cpp  binaryop.h  column.cpp  column.h  data_type.cpp  data_type.h  device_memory.cpp  device_memory.h  groupby.cpp  groupby.h  interop.cpp  interop.h  io.cpp  io.h  join.cpp  join.h  lib.rs  memory_resource.cpp  memory_resource.h  operations.cpp  operations.h  pinned_host.cpp  pinned_host.h  pinned_memory.cpp  pinned_memory.h  scalar.cpp  scalar.h  sorting.cpp  sorting.h  stream.cpp  stream.h  table.cpp  table.h
src/: arrow.rs  ast.rs  binary_op.rs  column.rs  column_view.rs  config.rs  cudf_array.rs  data_type.rs  deferred_operation.rs  device_pool.rs  device_resource.rs  errors.rs  execution_context.rs  execution_policy.rs  group_by.rs  join.rs  keep_alive.rs  lib.rs  operations.rs  parquet.rs  pinned.rs  pinned_pool.rs  scalar.rs  sort.rs  stream.rs  stream_readiness.rs  table.rs  table_view.rs  test_activity.rs  test_utils.rs
src/io/: arrow.rs  mod.rs  parquet.rs  scalar.rs
src/join/: common.rs  equi.rs  hash.rs  indices.rs  masks.rs  mod.rs  output.rs
src/operations/: binary.rs  copying.rs  group_by.rs  mod.rs  sort.rs
src/operations/join/: filtered.rs  hash.rs  indices.rs  mod.rs  one_shot.rs  tests.rs  utils.rs
src/storage/: column.rs  column_view.rs  mod.rs  scalar.rs  table.rs  table_view.rs
