[workspace]
members = [
    "libcudf-sys",
    "libcudf-benchmarks",
    "libcudf-datafusion",
    "libcudf-datafusion-benchmarks",
]
resolver = "2"

[workspace.dependencies]
arrow = { version = "58", features = ["ffi", "prettyprint"] }
arrow-schema = "58"
cxx = "1.0"
thiserror = "2.0"

# Promote rustc + clippy warnings to errors workspace-wide. Member crates
# opt in via `[lints] workspace = true`. Per-call-site `#[allow(...)]` still
# works for cases where the lint genuinely doesn't apply (FFI bindings,
# helpers with intentionally many arguments, etc.).
[workspace.lints.rust]
unused = "deny"

[workspace.lints.clippy]
all = "deny"

[package]
name = "libcudf-rs"
version = "0.1.0"
edition = "2021"
authors = [
    "notfilippo",
    "gabotechs",
]

[dependencies]
libcudf-sys = { path = "libcudf-sys" }
cxx = { workspace = true }
arrow = { workspace = true }
arrow-schema = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
cuda-runtime-sys = "0.3.0-alpha.1"

[lints]
workspace = true
