[package]
name = "libcudf-benchmarks"
version = "0.1.0"
edition = "2021"

[dependencies]
libcudf-rs = { path = ".." }
arrow = { workspace = true }

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }

[[bench]]
name = "arrow_conversion"
harness = false

[lints]
workspace = true
