[package]
name = "libcudf-datafusion"
version = "0.1.0"
edition = "2021"
authors = ["notfilippo", "gabotechs"]

[dependencies]
libcudf-rs = { path = ".." }
arrow = { workspace = true }
arrow-schema = { workspace = true }
datafusion = "51"
datafusion-expr = "51"
datafusion-physical-plan = "51"
futures = "0.3"
async-trait = "0.1"
tokio = { version = "1.41", features = ["rt", "macros"] }
futures-util = "0.3"
delegate = "0.13"

# integration tests deps
insta = { version = "1.43.1", features = ["filters"], optional = true }
tpchgen = { git = "https://github.com/clflushopt/tpchgen-rs", rev = "e83365a5a9101906eb9f78c5607b83bc59849acf", optional = true }
tpchgen-arrow = { git = "https://github.com/clflushopt/tpchgen-rs", rev = "e83365a5a9101906eb9f78c5607b83bc59849acf", optional = true }
parquet = { version = "57", optional = true }
pretty_assertions = { version = "1.4", optional = true }

#cli deps
clap = { version = "4", features = ["derive"], optional = true }
datafusion-cli = { version = "51", optional = true }
env_logger = { version = "0.11", optional = true }
dirs = { version = "6", optional = true }

[features]
integration = [
  "insta",
  "tpchgen",
  "tpchgen-arrow",
  "parquet",
  "pretty_assertions",
]
cli = ["clap", "datafusion-cli", "env_logger", "dirs"]
tpch = ["integration"]

[dev-dependencies]
tokio = { version = "1.41", features = ["full"] }
criterion = { version = "0.7", features = ["html_reports"] }

# integration tests deps
insta = { version = "1.43.1", features = ["filters"] }
tpchgen = { git = "https://github.com/clflushopt/tpchgen-rs", rev = "e83365a5a9101906eb9f78c5607b83bc59849acf" }
tpchgen-arrow = { git = "https://github.com/clflushopt/tpchgen-rs", rev = "e83365a5a9101906eb9f78c5607b83bc59849acf" }
parquet = { version = "57" }
pretty_assertions = { version = "1.4" }


[[bench]]
name = "aggregate"
harness = false

[[bench]]
name = "join"
harness = false

[[bench]]
name = "load_unload"
harness = false

[[bench]]
name = "tpch_pipeline"
harness = false

[[bin]]
name = "cli"
path = "bin/cli.rs"
required-features = ["cli"]
