[package]
name = "libcudf-datafusion"
version = "0.1.0"
edition = "2021"
authors = [
    "notfilippo",
    "gabotechs",
]

[dependencies]
libcudf-rs = { path = ".." }
arrow = { workspace = true }
arrow-schema = { workspace = true }
datafusion = "53"
datafusion-expr = "53"
datafusion-physical-plan = "53"
futures = "0.3"
async-trait = "0.1"
tokio = { version = "1.41", features = ["rt", "macros"] }
futures-util = "0.3"
delegate = "0.13"

# integration tests deps
insta = { version = "1.43.1", features = ["filters"], optional = true }
tpchgen = { git = "https://github.com/clflushopt/tpchgen-rs", rev = "31d515c4a2c16a8d434b2c80c197a78d9e64e8b6", optional = true }
tpchgen-arrow = { git = "https://github.com/clflushopt/tpchgen-rs", rev = "31d515c4a2c16a8d434b2c80c197a78d9e64e8b6", optional = true }
parquet = { version = "58", optional = true }
pretty_assertions = { version = "1.4", optional = true }

#cli deps
clap = { version = "4", features = ["derive"], optional = true }
datafusion-cli = { version = "53", optional = true }
env_logger = { version = "0.11", optional = true }
dirs = { version = "6", optional = true }

[features]
integration = [
    "insta",
    "tpchgen",
    "tpchgen-arrow",
    "parquet",
    "pretty_assertions",
]
cli = [
    "clap",
    "datafusion-cli",
    "env_logger",
    "dirs",
]
tpch = ["integration"]
clickbench = ["integration"]

[dev-dependencies]
tokio = { version = "1.41", features = ["full"] }
criterion = { version = "0.7", features = ["html_reports"] }

# integration tests deps
insta = { version = "1.43.1", features = ["filters"] }
tpchgen = { git = "https://github.com/clflushopt/tpchgen-rs", rev = "31d515c4a2c16a8d434b2c80c197a78d9e64e8b6" }
tpchgen-arrow = { git = "https://github.com/clflushopt/tpchgen-rs", rev = "31d515c4a2c16a8d434b2c80c197a78d9e64e8b6" }
parquet = { version = "58" }
pretty_assertions = { version = "1.4" }
libcudf-datafusion-benchmarks = { path = "../libcudf-datafusion-benchmarks" }


[[bench]]
name = "aggregate"
harness = false

[[bench]]
name = "join"
harness = false

[[bench]]
name = "load_unload"
harness = false

[[bench]]
name = "tpch_pipeline"
harness = false

[[bin]]
name = "cli"
path = "bin/cli.rs"
required-features = ["cli"]

[lints]
workspace = true
