[package]
name = "libcudf-sys"
version = "0.1.0"
edition = "2021"
description = "Low-level FFI bindings to libcudf using cxx"
authors = [
    "notfilippo",
    "gabotechs",
]
links = "cudf"

[dependencies]
cxx = { workspace = true }
arrow = { workspace = true }
arrow-schema = { workspace = true }

[dev-dependencies]
insta = "1"

[build-dependencies]
cxx-build = "1.0"
cmake = "0.1"
num_cpus = "1.0"
reqwest = { version = "0.12", features = ["blocking"] }
zip = "6.0"
flate2 = "1.1"
tar = "0.4"
which = "7.0"
[lints]
workspace = true
